--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="delete_all">Delete All</string>
     <string name="add">Add</string>
     <string name="delete">Delete</string>
+    <string name="no_data_found">No Data Found</string>
 
     <string-array name="priorities">
         <item>High</item>
